# cryobiology3

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_progress.py  Технічне завдання.docx
cell_anatator/: model_loader.py
cellsegkit/: __init__.py
cellsegkit/converter/: __init__.py  converter.py
cellsegkit/docs/: gpu_setup_guide.md
cellsegkit/exporter/: __init__.py  exporter.py
cellsegkit/importer/: __init__.py  importer.py
cellsegkit/loader/: __init__.py  model_loader.py
cellsegkit/pipeline/: __init__.py  pipeline.py
cellsegkit/utils/: __init__.py  gpu_utils.py  system.py
examples/: advanced_usage.py  basic_usage.py  gpu_example.py  gui_demo.py  gui_demo_README.md  mask_conversion.py  selective_export.py  test_installation.py
exporter/: exporter.py
importer/: importer.py
loader/: model_loader.py
pipeline/: pipeline.py
