[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellsegkit"
version = "0.1.0"
description = "A toolkit for cell segmentation using Cellpose and CellSAM models"
readme = "README.md"
authors = [
    {name = "Fedir Yarovyi", email = "fedor.yarovoyi2048@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
"Homepage" = "https://github.com/nazarzharskyi/cryobiology3"
"Bug Tracker" = "https://github.com/nazarzharskyi/cryobiology3"
"Documentation" = "https://github.com/nazarzharskyi/cryobiology3"
"Source Code" = "https://github.com/nazarzharskyi/cryobiology3"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
